# Scyther

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py  scyther  scyther-dev
ai/: classifier.py  coder.py  ollama_client.py  planner.py  reviewer.py
commands/: about_command.py  append_command.py  config_command.py  copy_command.py  create_command.py  delete_command.py  deps_command.py  display_command.py  doctor_command.py  exit_command.py  find_command.py  git_diff_command.py  git_status_command.py  help_command.py  largest_command.py  list_command.py  mkdir_command.py  model_command.py  move_command.py  open_command.py  permission_command.py  recent_command.py  refs_command.py  replace_command.py  search_command.py  stats_command.py  summary_command.py  todo_command.py  tree_command.py  version_command.py  where_command.py  write_command.py
core/: command_registry.py  config.py  errors.py  models.py  state.py
permissions/: access_control.py  permission_manager.py
routing/: command_router.py  intent_router.py  parser.py
scyther/: __init__.py  __main__.py  run.py
services/: code_index_service.py  file_service.py  git_service.py  path_service.py  repo_service.py  repository_stats_service.py  search_service.py
tests/: test_code_index_service.py  test_command_registry.py  test_command_router.py  test_config_service.py  test_copy_command.py  test_delete_command.py  test_deps_command.py  test_edit_tool.py  test_file_service.py  test_file_tool.py  test_git_diff_command.py  test_git_status_command.py  test_help_command_new.py  test_parser.py  (+20 more)
(+67 files in other folders)
