[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scyther"
version = "0.1.0"
description = "A command-first developer CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]
[tool.setuptools.packages.find]
include = [
    "commands*",
    "core*",
    "permissions*",
    "routing*",
    "services*",
    "tools*",
    "ui*"
]
exclude = [
    "tests*",
    "test_env*"
]