[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "scyther"
dynamic = ["version"]
description = "A command-first developer CLI utility for repository inspection, navigation, and safe file mutations."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rich>=15.0.0",
    "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "build",
    "twine",
]

[project.scripts]
scyther = "scyther.run:main"

[tool.setuptools.packages.find]
include = [
    "scyther*"
]
exclude = [
    "tests*",
    "test_env*"
]

[tool.setuptools.dynamic]
version = {attr = "scyther.core.version.__version__"}